--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -9,7 +9,7 @@
   "activeConnectionsPrompt": "Hier werden aktive Verbindungen angezeigt",
   "add": "Hinzufügen",
   "add_contact": "Kontakt hinzufügen",
-  "add_contact_to_address_book": "Kontakt Adressbuch hinzufügen?",
+  "add_contact_to_address_book": "Möchten Sie diesen Kontakt zu Ihrem Adressbuch hinzufügen?",
   "add_custom_node": "Neuen benutzerdefinierten Knoten hinzufügen",
   "add_custom_redemption": "Benutzerdefinierte Einlösung hinzufügen",
   "add_fund_to_card": "Prepaid-Guthaben zu den Karten hinzufügen (bis zu ${value})",
@@ -937,7 +937,7 @@
   "wallet": "Geldbörse",
   "wallet_group": "Walletgruppe",
   "wallet_group_description_existing_seed": "Sie haben für diese Wallet einen vorhandenen Seed verwendet. Sie können den Seed erneut überprüfen, wenn Sie ihn bestätigen oder aufschreiben müssen.",
-  "wallet_group_description_four": "um eine einzelne Wallet mit neuen Seed zu erschaffen.",
+  "wallet_group_description_four": "um eine einzelne Wallet mit neuem Seed zu erschaffen.",
   "wallet_group_description_one": "In Cake Wallet können Sie eine ",
   "wallet_group_description_open_wallet": "Andernfalls können Sie die Wallet jetzt öffnen",
   "wallet_group_description_three": "werden Ihnen die verfügbaren Wallets und -Gruppen angezeigt. Oder Sie wählen",
